syntax = "proto3";

option go_package = "app/grpc";

import "google/protobuf/timestamp.proto";

package note;

service NoteService {
  rpc CreateNote (CreateNoteRequest) returns (CreateNoteResponse);
  rpc GetNote (GetNoteRequest) returns (GetNoteResponse);
  rpc ListNotes (ListNotesRequest) returns (ListNotesResponse);
  rpc UpdateNote (UpdateNoteRequest) returns (UpdateNoteResponse);
  rpc DeleteNote (DeleteNoteRequest) returns (DeleteNoteResponse);
}

message Note {
  string id = 1;
  string title = 2;
  string content = 3;
  string category = 4;
  repeated string tags = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message CreateNoteRequest {
  string title = 1;
  string content = 2;
  string category = 3;
  repeated string tags = 4;
}

message CreateNoteResponse {
  Note note = 1;
}

message GetNoteRequest {
  string id = 1;
}

message GetNoteResponse {
  Note note = 1;
}

message ListNotesRequest {
  int32 page = 1;
  int32 limit = 2;
  string category = 3;
  repeated string tags = 4;
}

message ListNotesResponse {
  repeated Note notes = 1;
  int32 total_count = 2;
}

message UpdateNoteRequest {
  string id = 1;
  string title = 2;
  string content = 3;
  string category = 4;
  repeated string tags = 5;
}

message UpdateNoteResponse {
  Note note = 1;
}

message DeleteNoteRequest {
  string id = 1;
}

message DeleteNoteResponse {
  bool success = 1;
}
